Closed
Bug 196308
Opened 23 years ago
Closed 23 years ago
Flashing / flickering display when loading / switching windows / tabs / resizing (browser page area / frames / iframes / dropdowns turn black / strange refresh / redraw)
Categories
(Core Graveyard :: Image: Painting, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: fredbezies, Assigned: aaronlev)
References
()
Details
(Keywords: regression)
Attachments
(1 file)
|
739 bytes,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4a) Gecko/20030307
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4a) Gecko/20030307
I can see a speedy flash of black then white background when switching windows.
I only see this today.
Is this bug related to patch for bug 181676 ? It would be strange...
By the way, it is very bad for the eyes and every tabbed-browsing addict :-)
Reproducible: Always
Steps to Reproduce:
1.Build mozilla with latest CVS patches
2.Load Mozilla and create two tabs and open 2 pages.
3.Switch between them...
Actual Results:
Background flashing black then white
Expected Results:
No background flashing.
My about:buildconfig
Build platform
target
i686-pc-cygwin
Build tools
Compiler Version Compiler flags
cl -TC -W3 -nologo -Gy -Fd$(PDBFILE)
cl -TP -W3 -nologo -Gy -Fd$(PDBFILE)
Configure arguments
--enable-calendar --enable-crypto --disable-installer --disable-tests
--disable-debug --enable-optimize --enable-strip --disable-pedantic
--without-system-jpeg --without-system-zlib --enable-extensions
Comment 1•23 years ago
|
||
It also happens when opening links in new tabs in the background. (Without any
actual switching.) 2003030704 / XP.
Comment 2•23 years ago
|
||
I just saw the CC: box in this bug render all in black. (I had to do a reload.)
It's probably related.
Keywords: regression
Comment 3•23 years ago
|
||
Bug also appears in Windows 2000.
Comment 4•23 years ago
|
||
Happens on Win98 as well. It appears to be using existing graphics context to
erase the background -- navigation buttons, URL bar flashes in the background
before the actual HTML content is drawn.
Comment 5•23 years ago
|
||
Actually just click on any dropdown to see the flickering. Only occured on
IFRAME:s before (bug 163577 and bug 185202).
Comment 6•23 years ago
|
||
Apparently, it's any kind of refresh / rendering at all (perhaps the bug summary
should be tweaked). I'm going to have to go back to yesterday's build - this is
causing me too much eye-strain.
Comment 7•23 years ago
|
||
Bug best seen in Win98SE when hovering with mouse over the window of
downloadmanager, content and chrome. Each time a border is crossed it gives a
black flash.
Went back to 2003030608.
| Reporter | ||
Comment 8•23 years ago
|
||
Following comments #4 and #7, moving OS -> All
OS: Windows XP → All
Comment 9•23 years ago
|
||
While the number of OSs reported now indicates that this bug is hitting all
Windows platforms, nobody has yet reported an instance of this happening under
MacOS or *nix. Until we get reports from both of those platforms also we can't
correctly change this to All. (Having an entry for "All Windows" is being
worked on via bug 9468. And, yes, there are OSs other than "Windows" that could
be listed for the "PC" platform - I've been through this before...)
-> Windows XP (the original platform - even though, yes, more than XP is being
affected).
OS: All → Windows XP
Comment 10•23 years ago
|
||
Hi Jason,
I'm now using Mac OS X build 2003030703 and I can tell you that this build is
not affected by flashing backgrounds.
***
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.4a) Gecko/20030307
***
Comment 11•23 years ago
|
||
Can anybody running *unix confirm/deny this behaviour?
Comment 12•23 years ago
|
||
*** Bug 196330 has been marked as a duplicate of this bug. ***
Comment 13•23 years ago
|
||
The flashing may not be visible on Mac OS X or Unix because of window back
buffering.
Comment 14•23 years ago
|
||
aaronl, could this be from your checkin?
| Assignee | ||
Comment 15•23 years ago
|
||
I really don't any of my patches caused this. Not sure though, because I can't
make the bug happen on my build.
Comment 16•23 years ago
|
||
*** Bug 196348 has been marked as a duplicate of this bug. ***
Comment 17•23 years ago
|
||
I tried backing out aaronl's content id patch, and that fixed it for me.
I'm going to revert that change and see if the flashing returns just to
check. I'd take a look at the view change in that patch first, if I had to
guess.
-> aaronl
Assignee: jdunn → aaronl
Comment 18•23 years ago
|
||
testcases:
1. start browser, open downloadbox, move mouse over it.
I did this at work with current nightly 2003030704.
Here tested with yesterdays 2003030608:
no black flashes, but white flashes in this testcase from bug 196357:
2. http://www.foulds2000.freeserve.co.uk/bushv6.htm
This page restarts loading about all 3 seconds.
There is an upper part of the page with a scroller at the right,
and a lower part, about 20% of the page height, without scroller.
At start of nearly every load either the upper or the lower part gets white shortly.
This is a regression to build 1.3
I´ve been looking at 1.3 for some minutes,
and saw white flashes only in the lower part, and only about once or twice a
minute, not all 5 seconds.
| Reporter | ||
Comment 19•23 years ago
|
||
*** Bug 196426 has been marked as a duplicate of this bug. ***
Comment 20•23 years ago
|
||
I'm running WinXP Pro with Mozilla 1.3b and I do not see this bug. I cannot
duplicate it.
Comment 21•23 years ago
|
||
I'm using build 2003-03-07-17 on WinXP Pro and I am getting the same buggy
results. Antime you switch windows, or even go from one webpage to another you
get this on-screen flicker.
Comment 22•23 years ago
|
||
However, when I use build 2003-03-06-08 I do not get this result on WinXP PRo.
Comment 23•23 years ago
|
||
1.3b had a very annoying window display issues on my W2K system which is cleared
up in this version, however, I am seeing what everyone else here is seeing on
2003030717
Comment 24•23 years ago
|
||
*** Bug 196532 has been marked as a duplicate of this bug. ***
Comment 25•23 years ago
|
||
*** Bug 196503 has been marked as a duplicate of this bug. ***
Comment 26•23 years ago
|
||
Also Whe I click by right mouse button on a link on a page with frames, the
screen turns all black instead of some images and stay black until I resize or
restack the window. Sometimes Mozilla after this fully crashes refering to
module xpcom.dll
Updated•23 years ago
|
Flags: blocking1.4a?
Comment 27•23 years ago
|
||
I tested some builds and came up with this on WinXP
2003030608-trunk - ok
2003030609-trunk - ok (svg)
2003030704-trunk - broken
2003030708-trunk - broken (svg)
Comment 28•23 years ago
|
||
2003-03-09-04-trunk no good on Win2K. Happens in mail window too.
Comment 29•23 years ago
|
||
*** Bug 196502 has been marked as a duplicate of this bug. ***
Comment 30•23 years ago
|
||
*** Bug 196593 has been marked as a duplicate of this bug. ***
Comment 31•23 years ago
|
||
Is anybody here seeing the behaviour I described in comment 2 of this bug, or
that bug 196588 describes? If so, is that a different bug or a dupe of this one?
Comment 32•23 years ago
|
||
*** Bug 196588 has been marked as a duplicate of this bug. ***
Comment 33•23 years ago
|
||
per comment 11 : i see this behavior on XP Pro SP1 with 2003030904, but NOT on
Linux Mandrake 9.1 RC and nightly from same day.
per comment 31: i do NOT see the behavior mentioned in comment 2
Comment 35•23 years ago
|
||
*** Bug 196598 has been marked as a duplicate of this bug. ***
Updated•23 years ago
|
Severity: major → critical
Comment 36•23 years ago
|
||
comment 31: I've seen just about every element black at some point since this
bug started. I've also seen the entire page go black except for the selection.
Comment 37•23 years ago
|
||
*** Bug 196616 has been marked as a duplicate of this bug. ***
Comment 38•23 years ago
|
||
I also see this behavior when a single-line select (ie. combo box) either gains
or loses focus.
Comment 39•23 years ago
|
||
*** Bug 196636 has been marked as a duplicate of this bug. ***
Comment 40•23 years ago
|
||
*** Bug 196641 has been marked as a duplicate of this bug. ***
Comment 41•23 years ago
|
||
*** Bug 196664 has been marked as a duplicate of this bug. ***
Comment 42•23 years ago
|
||
based on comment 27, lots of checkins happenend between those dates:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=MozillaTinderboxAll&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=03%2F06%2F2003+09%3A00&maxdate=03%2F07%2F2003+04%3A00&cvsroot=%2Fcvsroot
relevant seem bug 181676, bug 194968, and the combination of 117316 and 171830
(more based on size then anything else)
Comment 43•23 years ago
|
||
See comment #17 before doing too much work. Bug 194968 is the main suspect already.
Comment 44•23 years ago
|
||
Attempting to head off more duplicates...
Summary: Flashing display when switching windows. → Flashing / flickering display when loading / switching windows / tabs / resizing (browser page area / frames / iframes / dropdowns turn black / strange refresh / redraw)
Comment 45•23 years ago
|
||
*** Bug 196709 has been marked as a duplicate of this bug. ***
Comment 46•23 years ago
|
||
*** Bug 196771 has been marked as a duplicate of this bug. ***
Comment 47•23 years ago
|
||
aaronl, have you been able to reproduce this bug yet? Can we get some traction
on this bug soon or backout the offending patch?
| Assignee | ||
Comment 48•23 years ago
|
||
I can repro this now, I'm working on it.
Comment 49•23 years ago
|
||
*** Bug 196651 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 50•23 years ago
|
||
It turns out that the lack of initData means we're a child window.
Creating initData to pass in my parameter gives me a default window type of
child window, but also a default clipchildren of false, which isn't what we're
supposed to have for child windows. That's causing the flickering somehow.
| Assignee | ||
Updated•23 years ago
|
Attachment #116829 -
Flags: review?(roc+moz)
How about we just change the constructor for the initdata to do the right thing?
| Reporter | ||
Comment 52•23 years ago
|
||
*** Bug 196819 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 53•23 years ago
|
||
*** Bug 196867 has been marked as a duplicate of this bug. ***
Comment 54•23 years ago
|
||
Holy ****, can someone back this out so that I can use the daily builds without
going into epileptic seizures from the constant flashing between pages, in tabs,
etc.
Sorry for the ranting spam, but someone had to say it.
Comment 55•23 years ago
|
||
If you read the comments you should have seen that they are working on it. You
can't expect 100% functionality and user experience when running nightlies.
Besides I think it's way better to fix the problem than back out the whole thing.
Comment 56•23 years ago
|
||
have you checked the background painting for invalidated client area?
see comment #2 of dup bug 196348.
*** Bug 196909 has been marked as a duplicate of this bug. ***
Comment 58•23 years ago
|
||
> I think it's way better to fix the problem than back out the whole thing.
I think that this problem is much more apparent than any "problem" that might be
caused by backing out the other fix. Unless a patch for this is imminent, I
would say that the "better" approach would be to back out the other fix, reopen
that bug, and work on modifying the patch for it it so that it doesn't cause
this problem when checked back in again.
The statement "That's causing the flickering somehow." in comment 50 isn't too
comforting, because while the symptom may be known, the underlying cause still
hasn't been discovered/understood. All of this is based on the fact that
nothing further has been discovered and simply not commented on here.
| Assignee | ||
Comment 59•23 years ago
|
||
The patch fixes the problem by restoring the clipChildren value to what it
normally was for those windows.
So, while I don't understand why that caused flickering, that's just a side
note. It's a mistake to make that value different from what it used to be, and
the patch corrects that.
Attachment #116829 -
Flags: superreview+
Attachment #116829 -
Flags: review?(roc+moz)
Attachment #116829 -
Flags: review+
| Assignee | ||
Comment 60•23 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 61•23 years ago
|
||
What I still don't understand is that when I was resizing the window (before
that the patch has been applied), the chrome was refreshed normally but a copy
of it was also appearing in the content area.
I would guess that there is one reflow, that appeared in that bug, that is
unnecessary and that we should suppress.
Comment 62•23 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4a) Gecko/20030311 (1:17 PM)
Still flashing (after patch?) - black areas behind and around. Switching between
two overlapped windows gives a good example (the overlapped area flashes black
several times).
Comment 63•23 years ago
|
||
You need to wait until the next available nightly build, compiled AFTER 11:29
PST. Anything you download now will still be a pre-patched version. It's only
been checked in - no new build has yet been generated. (In other words, wait
until tomorrow morning.)
Comment 64•23 years ago
|
||
Can a build be forced? I've seen sparatic builds after hours and on weekends,
this patch would warrant a new push :)
Oh, yeah, btw I'm not just an irrate user, I just want to contribute as much as
possible and just want to try all the daily build to make sure new patch errors
are caught as soon as possible. I've been following this thread right from the
beginning and I'm well aware of all the hard work that goes into the daily
process of bug tracking and trully appreciate it, thanks for a kick ass effort
and app.
I've already started to research how to use csv and build my own dailies, but
now I just have to set more time aside to figure this out. If someone could
help me offline with building this for Windows I would really appreciate it.
Comment 65•23 years ago
|
||
It is not wise to force the patch, let the maintainers do their own work since
it wouldn't kill us to wait another 1/2 day. Let the developers and maintainers
use their own available time to do their works.
| Reporter | ||
Comment 66•23 years ago
|
||
Well, on my 10 minutes old CVS based build, this eye killer bug is gone. This is
a very good news :-)
Thanks for fixing this painfull bug.
Comment 67•23 years ago
|
||
*** Bug 196990 has been marked as a duplicate of this bug. ***
Comment 68•23 years ago
|
||
*** Bug 197007 has been marked as a duplicate of this bug. ***
Comment 69•23 years ago
|
||
*** Bug 197012 has been marked as a duplicate of this bug. ***
Comment 70•23 years ago
|
||
*** Bug 197013 has been marked as a duplicate of this bug. ***
Comment 71•23 years ago
|
||
I can't reproduce this bug with 2003031204-trunk/WinXP.
And I can't reproduced two bugs.
Bug 163577 IFRAMEs flicker when scrolled and when parent window is resized
Bug 185202
iframes flicker when drop-down selects are used
Dup of this bug?
Comment 72•23 years ago
|
||
*** Bug 197078 has been marked as a duplicate of this bug. ***
Comment 73•23 years ago
|
||
Confirming this bug has been fixed on Mozilla/5.0 (Windows; U; Windows NT 5.0;
en-US; rv:1.4a) Gecko/20030312.
Thanks!
Comment 74•23 years ago
|
||
i just downloaded mozilla 1.4, and the flicker appeared again for me.
on a page with an iframe like this:
http://bugzilla.mozilla.org/enter_bug.cgi?product=Browser&format=guided
the flicker appears when you click in the iframe, and then out of the iframe
again. is this happening to me only?
it works for me with build 2003031404 on WinXP
Comment 76•23 years ago
|
||
(of course in Comment #74 i meant moz 1.3, sorry for the typo)
to Comment #75:
was there some content in the iframe?
if the iframe has nothing in it, the flicker does not appear for me too. it
appears as soon something is loaded in the iframe.
Updated•23 years ago
|
Flags: blocking1.4a? → blocking1.4a-
You need to log in
before you can comment on or make changes to this bug.
Description
•