Bug 196308. Flashing/flickering display. r/sr=roc+moz